--- a/EDA_Template.ipynb
+++ b/EDA_Template.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "df.head()\n",
     "df.columns\n",
-    "df.datatypes\n",
+    "df.dtypes\n",
     "df.shape\n",
     "df.describe().transpose()\n",
     "df.info()"
